Add additional Jest test scripts and update dependencies in package.json and pnpm-lock.yaml

--- a/package.json
+++ b/package.json
@@ -14,7 +14,26 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "test": "jest",
+    "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --maxWorkers=2",
+    "test:unit": "jest test/unit",
+    "test:integration": "jest test/integration",
+    "test:performance": "jest test/performance --runInBand",
+    "test:core": "jest test/unit/core",
+    "test:builders": "jest test/unit/builders",
+    "test:writers": "jest test/unit/writers",
+    "test:formatters": "jest test/unit/formatters",
+    "test:utils": "jest test/unit/utils",
+    "test:changed": "jest --onlyChanged",
+    "test:related": "jest --findRelatedTests",
+    "test:verbose": "jest --verbose",
+    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
+    "test:clear": "jest --clearCache",
+    "test:updateSnapshot": "jest --updateSnapshot",
+    "test:coverage:html": "jest --coverage && open coverage/index.html",
+    "test:ci:coverage": "jest --ci --coverage --coverageReporters=text-lcov | coveralls",
+    "test:badges": "jest --coverage && jest-coverage-badges output ./coverage",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write \"src/**/*.ts\"",
     "prepare": "npm run build",
@@ -47,6 +66,7 @@
     "node": ">=12.0.0"
   },
   "devDependencies": {
+    "@jest/types": "^30.2.0",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-typescript": "^11.0.0",
