--- a/.github/workflows/tag-version.yml
+++ b/.github/workflows/tag-version.yml
@@ -4,7 +4,10 @@ on:
   push:
     branches:
       - main
-
+      
+permissions:
+  contents: write
+  
 jobs:
   tag:
     if: github.repository_owner == 'opencorex-org'
