Simplify build command for demo in deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,9 +32,7 @@ jobs:
 
       # Build demo only
       - name: Build demo
-        run: |
-          cd sheetra-demo
-          pnpm build
+        run: pnpm --filter sheetra-demo build
 
       # Deploy
       - name: Deploy
